--- a/app/templates/academic_services/login.html
+++ b/app/templates/academic_services/login.html
@@ -20,10 +20,15 @@
                             </div>
                         </div>
                         <div class="field">
-                            <div class="control has-icons-left is-expanded">
+                            <div class="control has-icons-left has-icons-right is-expanded">
                                 {{ form.password(placeholder='Password', class='input') }}
                                 <span class="icon is-small is-left">
                                     <i class="fas fa-lock"></i>
+                                </span>
+                                <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer;"
+                                      onclick="toggleShowPassword()"
+                                >
+                                    <i id="open_password_icon" class="fas fa-eye"></i>
                                 </span>
                             </div>
                         </div>
@@ -41,4 +46,23 @@
         </div>
     </div>
 </section>
+{% endblock %}
+{% block scripts %}
+    {{ super() }}
+    <script>
+        function toggleShowPassword() {
+            const password = document.getElementById("password");
+            const openPasswordIcon = document.getElementById("open_password_icon");
+
+            if (password.type === "password") {
+                password.type = "text";
+                openPasswordIcon.classList.remove("fa-eye");
+                openPasswordIcon.classList.add("fa-eye-slash");
+            } else {
+                password.type = "password";
+                openPasswordIcon.classList.remove("fa-eye-slash");
+                openPasswordIcon.classList.add("fa-eye");
+            }
+        }
+    </script>
 {% endblock %}
