Edited text in create_draft_result template of service_admin templates

--- a/app/templates/service_admin/create_draft_result.html
+++ b/app/templates/service_admin/create_draft_result.html
@@ -51,7 +51,7 @@
                                         {% if item.draft_file %}
                                             {{ item.draft_file }}
                                         {% else %}
-                                            ยังไม่อัปโหลดไฟล์
+                                            กรุณาอัปโหลดไฟล์ PDF
                                         {% endif %}
                                     </span>
                                 </label>
@@ -137,7 +137,7 @@
                 if (this.files.length > 0) {
                     span.textContent = this.files[0].name;
                 } else {
-                    span.textContent = 'ยังไม่อัปโหลดไฟล์';
+                    span.textContent = 'กรุณาอัปโหลดไฟล์ PDF';
                 }
             });
         });
