--- a/app/templates/academic_services/add_payment.html
+++ b/app/templates/academic_services/add_payment.html
@@ -77,7 +77,7 @@
                                                 เลือกไฟล์…
                                             </span>
                                         </span>
-                                        <span class="file-name" id="filename">กรุณาเลือกไฟล์</span>
+                                        <span class="file-name" id="filename">กรุณาอัปโหลดไฟล์รูปภาพ</span>
                                     </label>
                                 </div>
                             </div>
@@ -159,7 +159,7 @@
     </script>
     <script>
         $(document).ready(() => {
-            $('#filename').text('กรุณาเลือกไฟล์');
+            $('#filename').text('กรุณาอัปโหลดไฟล์รูปภาพ');
         })
         $('#file_upload').change(function (e) {
             let fileName = e.target.files[0].name;
