Edited file_label in create_draft_result template, edit_draft_result template and upload_invoice_file template of service_admin templates

--- a/app/templates/service_admin/create_final_result.html
+++ b/app/templates/service_admin/create_final_result.html
@@ -38,7 +38,7 @@
                                         {% if item.final_file %}
                                             {{ item.final_file }}
                                         {% else %}
-                                            ยังไม่อัปโหลดไฟล์
+                                            กรุณาอัปโหลดไฟล์ PDF
                                         {% endif %}
                                     </span>
                                 </label>
@@ -82,7 +82,7 @@
                 if (this.files.length > 0) {
                     span.textContent = this.files[0].name;
                 } else {
-                    span.textContent = 'ยังไม่อัปโหลดไฟล์';
+                    span.textContent = 'กรุณาอัปโหลดไฟล์ PDF';
                 }
             });
         });
