--- a/app/templates/service_admin/upload_invoice_file.html
+++ b/app/templates/service_admin/upload_invoice_file.html
@@ -55,7 +55,7 @@
                                             </span>
                                             <span class="file-label">เลือกไฟล์…</span>
                                         </span>
-                                        <span class="file-name" id="filename">กรุณาเลือกไฟล์</span>
+                                        <span class="file-name" id="filename">กรุณาอัปโหลดไฟล์ PDF</span>
                                     </label>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
     </script>
     <script>
         $(document).ready(() => {
-            $('#filename').text('กรุณาเลือกไฟล์');
+            $('#filename').text('กรุณาอัปโหลดไฟล์ PDF');
         })
         $('#file_upload').change(function (e) {
             let fileName = e.target.files[0].name;
