--- a/app/templates/academic_services/result_index.html
+++ b/app/templates/academic_services/result_index.html
@@ -121,7 +121,7 @@
                                             {% if item.approved_at %}
                                                 <div class="field has-addons">
                                                     <div class="control">
-                                                        <a class="button is-small is-success is-light is-rounded"
+                                                        <a class="button is-small is-light is-rounded"
                                                            href="{{ url_for('academic_services.download_file', key=item.draft_file,
                                                            download_filename=item.report_language + ' ' + '(ฉบับร่าง)' + '.pdf') }}"
                                                         >
@@ -144,12 +144,12 @@
                                             {% else %}
                                                 <div class="field has-addons">
                                                     <div class="control">
-                                                        <a class="button is-small is-outlined is-info is-rounded"
+                                                        <a class="button is-small is-outlined is-warning is-rounded"
                                                            href="{{ url_for('academic_services.view_result_item',
                                                            result_id=result.id, result_item_id=item.id, menu=menu, tab=tab) }}"
                                                         >
                                                             <span class="icon is-small"><i class="fas fa-download"></i></span>
-                                                            <span>{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
+                                                            <span>ขอแก้ไข{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
                                                         </a>
                                                     </div>
                                                 </div>
