Edited button in result_index template of academic_services templates

--- a/app/templates/academic_services/result_index.html
+++ b/app/templates/academic_services/result_index.html
@@ -148,7 +148,7 @@
                                                            href="{{ url_for('academic_services.view_result_item',
                                                            result_id=result.id, result_item_id=item.id, menu=menu, tab=tab) }}"
                                                         >
-                                                            <span class="icon is-small"><i class="fas fa-download"></i></span>
+                                                            <span class="icon is-small"><i class="fas fa-pen"></i></span>
                                                             <span>ขอแก้ไข{{ item.report_language + ' ' + '(ฉบับร่าง)' or 'ไม่ระบุภาษา' }}</span>
                                                         </a>
                                                     </div>
