Edited condition in create_sample_appointment view of academic_services views

--- a/app/templates/academic_services/confirm_sample_appointment_page.html
+++ b/app/templates/academic_services/confirm_sample_appointment_page.html
@@ -12,8 +12,8 @@
                 <p class="subtitle is-5">ระบบได้บันทึกการนัดหมายส่งตัวอย่างของท่านเรียบร้อยแล้ว</p>
                 <div class="notification is-info is-light mt-4 has-text-left">
                     ขอความกรุณาดำเนินการนำส่งตัวอย่างตามวัน เวลา และสถานที่ที่ระบุ พร้อมนำเอกสาร<br>
-                    <strong class="has-text-info">1. ใบนำส่งตัวอย่าง</strong><br>
-                    <strong class="has-text-info">2. ใบอนุญาตนำเข้าหรือผลิต และสูตรตำรับ/สูตร 100% ของตัวอย่าง</strong><br>
+                    <strong class="has-text-danger">1. ใบนำส่งตัวอย่าง</strong><br>
+                    <strong class="has-text-danger">2. ใบอนุญาตนำเข้าหรือผลิต และสูตรตำรับ/สูตร 100% ของตัวอย่าง</strong><br>
                     ประกอบการส่งมอบ
                 </div>
                 <div class="buttons is-centered mt-5" style="text-align: left;">
