--- a/app/templates/service_admin/view_invoice_for_finance.html
+++ b/app/templates/service_admin/view_invoice_for_finance.html
@@ -151,6 +151,8 @@
                                 <span class="icon"><i class="fas fa-check"></i></span>
                                 <span>อนุมัติ</span>
                             </a>
+                        {% endif %}
+                        {% if invoice.paid_at and not invoice.is_paid %}
                             <a class="button is-danger" onclick="vm.danger({{ invoice.id }})">
                                 <span class="icon"><i class="fas fa-times"></i></span>
                                 <span>ยกเลิก</span>
